Updates to describe how to get everything working with qemu and colima

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "hhvm/hsl": "^4.108",
-        "hhvm/hhvm-autoload": "^3.3"
+        "hhvm/hhvm-autoload": "^3.3",
+        "facebook/hh-clilib": "^2.6"
     },
     "config": {
         "allow-plugins": {
